<resources>
    <string name="app_name">GreenGuardMobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="login">Sign in account</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="pests">Pests</string>
    <string name="plants">Plants</string>
    <string name="tasks">Tasks</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="start_work_time">Start work time</string>
    <string name="end_work_time">End work time</string>
    <string name="working_days">Working days</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="save">Save</string>
    <string name="calculate_salary">Calculate salary</string>
    <string name="login_toast">Please enter email and password</string>
    <string name="calculated_salary">Calculated salary</string>
    <string name="your_salary">Your salary</string>
    <string name="grn">grn.</string>
    <string name="add_fertilizer">Add new fertilizer</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="update_fertilizer_quantity">Update fertilizer quantity</string>
    <string name="add_pest_to_plant">Add pest to plant</string>
    <string name="remove_pest_from_plant">Remove pest from plant</string>
    <string name="today_tasks">Today tasks</string>
    <string name="update_task_status">Update task status</string>
    <string name="add_plant">Add new plant</string>
    <string name="update_plant">Update plant</string>
    <string name="temp">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="additional_info">Additional info</string>
    <string name="location">Location</string>
    <string name="update_status">Update status</string>
    <string name="update_quantity">Update quantity</string>
    <string name="add_to_plant">Add to plant</string>
    <string name="remove_from_plant">Remove from plant</string>
    <string name="pest_added_success">Pest added to plant successfully</string>
    <string name="pest_removed_success">Pest removed from plant successfully</string>
    <string name="no_pest_in_plant">Pest is not associated with selected plant</string>
    <string name="information_updated">Worker information updated successfully</string>
    <string name="login_error">Incorrect email or password</string>
</resources>