<!-- res/layout/popup_add_plant.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_add_plant">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="Update plant"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="25dp"
            android:textAlignment="center" />


        <EditText
            android:id="@+id/et_plant_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/location"
            android:background="#F8F1F4"
            android:textColor="#27353C"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_plant_light"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/light"
            android:background="#F8F1F4"
            android:textColor="#27353C"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_plant_humidity"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/humidity"
            android:background="#F8F1F4"
            android:textColor="#27353C"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_plant_temp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/temp"
            android:background="#F8F1F4"
            android:textColor="#27353C"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/et_additional_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/additional_info"
            android:background="#F8F1F4"
            android:textColor="#27353C"
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/white"
            android:text="ОК"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_gravity="center"
            app:cornerRadius="100dp" />
    </LinearLayout>
</RelativeLayout>
